crates/nash-report/tests/can/snapshots/can__kinds__higher_kinded_parameter.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 125
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype wrap 'f 'a = Wrap ('f 'a)\n"
---
(
    [
        (
            "wrap",
            Arrow(
                Arrow(
                    Type,
                    Type,
                ),
                Arrow(
                    Type,
                    Type,
                ),
            ),
            [
                Apply {
                    head: Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 25,
                            },
                            end: Position {
                                line: 5,
                                column: 27,
                            },
                        },
                        value: Var(
                            "f",
                        ),
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 28,
                                },
                                end: Position {
                                    line: 5,
                                    column: 30,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
            ],
        ),
    ],
    [],
)
