crates/nash-report/tests/can/snapshots/can__kinds__imported_interfaces_retain_higher_kinded_types.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 463
description: "module Shapes exposing (type wrap(..), type applied)\n\ntype wrap 'f 'a = Wrap ('f 'a)\ntype alias applied 'f 'a = 'f 'a\n\n\nmodule Main exposing (..)\n\nimport Shapes exposing (type wrap)\n\ntype holder 'f 'a = Holder (wrap 'f 'a)\n"
---
(
    Interface {
        impls: [],
        traits: [],
        home: ModuleName {
            package: None,
            name: "Shapes",
        },
        values: [],
        aliases: [
            InterfaceAlias {
                kind: Arrow(
                    Arrow(
                        Type,
                        Type,
                    ),
                    Arrow(
                        Type,
                        Type,
                    ),
                ),
                context: [
                    Apply {
                        head: Located {
                            region: Region {
                                start: Position {
                                    line: 4,
                                    column: 28,
                                },
                                end: Position {
                                    line: 4,
                                    column: 30,
                                },
                            },
                            value: Var(
                                "f",
                            ),
                        },
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 4,
                                        column: 31,
                                    },
                                    end: Position {
                                        line: 4,
                                        column: 33,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                        ],
                    },
                    Implied {
                        trait_: QualifiedName {
                            home: ModuleName {
                                package: Some(
                                    PackageName {
                                        author: "nash",
                                        project: "core",
                                    },
                                ),
                                name: "Builtin",
                            },
                            name: "Little",
                        },
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 4,
                                        column: 28,
                                    },
                                    end: Position {
                                        line: 4,
                                        column: 33,
                                    },
                                },
                                value: App {
                                    head: Located {
                                        region: Region {
                                            start: Position {
                                                line: 4,
                                                column: 28,
                                            },
                                            end: Position {
                                                line: 4,
                                                column: 30,
                                            },
                                        },
                                        value: Var(
                                            "f",
                                        ),
                                    },
                                    args: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 4,
                                                    column: 31,
                                                },
                                                end: Position {
                                                    line: 4,
                                                    column: 33,
                                                },
                                            },
                                            value: Var(
                                                "a",
                                            ),
                                        },
                                    ],
                                },
                            },
                        ],
                    },
                ],
                name: "applied",
                parameters: [
                    "f",
                    "a",
                ],
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 4,
                            column: 28,
                        },
                        end: Position {
                            line: 4,
                            column: 33,
                        },
                    },
                    value: App {
                        head: Located {
                            region: Region {
                                start: Position {
                                    line: 4,
                                    column: 28,
                                },
                                end: Position {
                                    line: 4,
                                    column: 30,
                                },
                            },
                            value: Var(
                                "f",
                            ),
                        },
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 4,
                                        column: 31,
                                    },
                                    end: Position {
                                        line: 4,
                                        column: 33,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                        ],
                    },
                },
                visibility: Public,
            },
        ],
        unions: [
            InterfaceUnion {
                kind: Arrow(
                    Arrow(
                        Type,
                        Type,
                    ),
                    Arrow(
                        Type,
                        Type,
                    ),
                ),
                context: [
                    Apply {
                        head: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 25,
                                },
                                end: Position {
                                    line: 3,
                                    column: 27,
                                },
                            },
                            value: Var(
                                "f",
                            ),
                        },
                        args: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 28,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 30,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                        ],
                    },
                ],
                name: "wrap",
                parameters: [
                    "f",
                    "a",
                ],
                ctors: [
                    Ctor {
                        labels: None,
                        name: "Wrap",
                        index: 0,
                        arity: 1,
                        arguments: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 3,
                                        column: 25,
                                    },
                                    end: Position {
                                        line: 3,
                                        column: 30,
                                    },
                                },
                                value: App {
                                    head: Located {
                                        region: Region {
                                            start: Position {
                                                line: 3,
                                                column: 25,
                                            },
                                            end: Position {
                                                line: 3,
                                                column: 27,
                                            },
                                        },
                                        value: Var(
                                            "f",
                                        ),
                                    },
                                    args: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 3,
                                                    column: 28,
                                                },
                                                end: Position {
                                                    line: 3,
                                                    column: 30,
                                                },
                                            },
                                            value: Var(
                                                "a",
                                            ),
                                        },
                                    ],
                                },
                            },
                        ],
                    },
                ],
                alternatives: 1,
                options: Unbox,
                visibility: Open,
            },
        ],
        binops: [],
    },
    Arrow(
        Arrow(
            Type,
            Type,
        ),
        Arrow(
            Type,
            Type,
        ),
    ),
    [
        Apply {
            head: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 34,
                    },
                    end: Position {
                        line: 5,
                        column: 36,
                    },
                },
                value: Var(
                    "f",
                ),
            },
            args: [
                Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 37,
                        },
                        end: Position {
                            line: 5,
                            column: 39,
                        },
                    },
                    value: Var(
                        "a",
                    ),
                },
            ],
        },
    ],
)
