crates/nash-report/tests/can/snapshots/can__kinds__independent_errors.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 225
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype Bad = Bad int\ntype Wrong = Wrong bytes\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Big` in field 1 of Big constructor `Wrong` in `Wrong`:
   ╭─[src/Main.nash:6:20]
 5 │ type Bad = Bad int
 6 │ type Wrong = Wrong bytes
   ·                    ─────
   ╰────
  help: The type has `Const` representation, but `Big` admits only Big types. Change the
        type or the representation requirement.

nash::names::representation_mismatch

  × This position requires `Big` in field 1 of Big constructor `Bad` in `Bad`:
   ╭─[src/Main.nash:5:16]
 4 │ 
 5 │ type Bad = Bad int
   ·                ───
 6 │ type Wrong = Wrong bytes
   ╰────
  help: The type has `Const` representation, but `Big` admits only Big types. Change the
        type or the representation requirement.
