crates/nash-report/tests/can/snapshots/can__kinds__independent_instantiations.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 133
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype option 'a = None | Some 'a\ntype both = Both (option Int) (option int)\n"
---
(
    [
        (
            "option",
            Arrow(
                Type,
                Type,
            ),
            [],
        ),
        (
            "both",
            Type,
            [],
        ),
    ],
    [],
)
