crates/nash-report/tests/can/snapshots/can__kinds__infinite_kind.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 191
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype bad 'f = Bad (bad bad)\n"
info: diagnostic
---
nash::names::kind_infinite

  × This application in field 1 of little constructor `Bad` in `bad` would require
  │ an infinite kind:
   ╭─[src/Main.nash:5:24]
 4 │ 
 5 │ type bad 'f = Bad (bad bad)
   ·                        ───
   ╰────
  help: Check the type application and the kinds of its arguments.
