crates/nash-report/tests/can/snapshots/can__kinds__inline_representation_predicates_reject_contradictory_repeated_variables.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 39
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype small 'a = Small (pair ('a : Big) ('a : Const))\n"
info: diagnostic
---
nash::names::contradictory_representation

  × The representation requirements on 'a are incompatible:
   ╭─[src/Main.nash:5:41]
 4 │ 
 5 │ type small 'a = Small (pair ('a : Big) ('a : Const))
   ·                                         ──
   ╰────
  help: Change the incompatible constraints or uses of this variable.
