crates/nash-report/tests/can/snapshots/can__kinds__labeled_fields.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 155
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype Datum = Datum { owner : Bytes, amount : Int }\n"
---
(
    [
        (
            "Datum",
            Type,
            [],
        ),
    ],
    [],
)
