crates/nash-report/tests/can/snapshots/can__kinds__list_of_little.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 173
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype option 'a = None | Some 'a\ntype alias xs = list (option int)\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Storable` in the lowercase name of alias `xs`:
   ╭─[src/Main.nash:6:23]
 5 │ type option 'a = None | Some 'a
 6 │ type alias xs = list (option int)
   ·                       ──────────
   ╰────
  help: The type has `Term` representation, but `Storable` admits Big or Const types.
        Change the type or the representation requirement.
