crates/nash-report/tests/can/snapshots/can__kinds__little_alias.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 143
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype alias count = int\n"
---
(
    [],
    [
        (
            "count",
            Type,
            [],
        ),
    ],
)
