crates/nash-report/tests/can/snapshots/can__kinds__little_function_field.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 121
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype thunk 'a = Thunk (unit -> 'a)\n"
---
(
    [
        (
            "thunk",
            Arrow(
                Type,
                Type,
            ),
            [],
        ),
    ],
    [],
)
